[package]
name = "solana-client"
description = "Solana Client"
documentation = "https://docs.rs/solana-client"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
indexmap = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
quinn = { workspace = true }
rayon = { workspace = true }
THIS-solana-connection-cache = { workspace = true }
THIS-solana-measure = { workspace = true }
THIS-solana-metrics = { workspace = true }
THIS-solana-pubsub-client = { workspace = true }
THIS-solana-quic-client = { workspace = true }
THIS-solana-rpc-client = { workspace = true, features = ["default"] }
THIS-solana-rpc-client-api = { workspace = true }
THIS-solana-rpc-client-nonce-utils = { workspace = true }
THIS-solana-sdk = { workspace = true }
THIS-solana-streamer = { workspace = true }
THIS-solana-thin-client = { workspace = true }
THIS-solana-tpu-client = { workspace = true, features = ["default"] }
THIS-solana-udp-client = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
crossbeam-channel = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
