[package]
name = "solana-cost-model"
description = "Solana cost model"
documentation = "https://docs.rs/solana-cost-model"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
lazy_static = { workspace = true }
log = { workspace = true }
THIS-solana-address-lookup-table-program = { workspace = true }
THIS-solana-bpf-loader-program = { workspace = true }
THIS-solana-compute-budget-program = { workspace = true }
THIS-solana-config-program = { workspace = true }
THIS-solana-frozen-abi = { workspace = true }
THIS-solana-frozen-abi-macro = { workspace = true }
THIS-solana-loader-v4-program = { workspace = true }
THIS-solana-metrics = { workspace = true }
THIS-solana-program-runtime = { workspace = true }
THIS-solana-sdk = { workspace = true }
THIS-solana-stake-program = { workspace = true }
THIS-solana-system-program = { workspace = true }
THIS-solana-vote-program = { workspace = true }

[lib]
crate-type = ["lib"]
name = "solana_cost_model"

[dev-dependencies]
solana-logger = { workspace = true }
solana-sdk = { workspace = true, features = ["dev-context-only-utils"] }
static_assertions = { workspace = true }
test-case = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
rustc_version = { workspace = true }
