[package]
name = "solana-perf"
description = "Solana Performance APIs"
documentation = "https://docs.rs/solana-perf"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
ahash = { workspace = true }
bincode = { workspace = true }
bv = { workspace = true, features = ["serde"] }
curve25519-dalek = { workspace = true }
dlopen2 = { workspace = true }
fnv = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
THIS-solana-frozen-abi = { workspace = true }
THIS-solana-frozen-abi-macro = { workspace = true }
THIS-solana-metrics = { workspace = true }
THIS-solana-rayon-threadlimit = { workspace = true }
THIS-solana-sdk = { workspace = true }
THIS-solana-vote-program = { workspace = true }

[target."cfg(target_os = \"linux\")".dependencies]
caps = { workspace = true }
libc = { workspace = true }
nix = { workspace = true }

[lib]
name = "solana_perf"

[dev-dependencies]
assert_matches = { workspace = true }
rand_chacha = { workspace = true }
THIS-solana-logger = { workspace = true }
test-case = { workspace = true }

[build-dependencies]
rustc_version = { workspace = true }

[[bench]]
name = "sigverify"

[[bench]]
name = "discard"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
