[package]
name = "solana-quic-client"
description = "Solana Quic Client"
documentation = "https://docs.rs/solana-quic-client"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
async-mutex = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
quinn = { workspace = true }
quinn-proto = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true, features = ["dangerous_configuration"] }
solana-connection-cache = { workspace = true }
THIS-solana-measure = { workspace = true }
THIS-solana-metrics = { workspace = true }
THIS-solana-net-utils = { workspace = true }
THIS-solana-rpc-client-api = { workspace = true }
THIS-solana-sdk = { workspace = true }
THIS-solana-streamer = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
crossbeam-channel = { workspace = true }
THIS-solana-logger = { workspace = true }
THIS-solana-perf = { workspace = true }
