[package]
name = "solana-runtime"
description = "Solana runtime"
documentation = "https://docs.rs/solana-runtime"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
aquamarine = { workspace = true }
arrayref = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
bv = { workspace = true, features = ["serde"] }
bytemuck = { workspace = true }
byteorder = { workspace = true }
bzip2 = { workspace = true }
crossbeam-channel = { workspace = true }
dashmap = { workspace = true, features = ["rayon", "raw-api"] }
dir-diff = { workspace = true }
flate2 = { workspace = true }
fnv = { workspace = true }
fs-err = { workspace = true }
im = { workspace = true, features = ["rayon", "serde"] }
index_list = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
lz4 = { workspace = true }
memmap2 = { workspace = true }
mockall = { workspace = true }
modular-bitfield = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
num_cpus = { workspace = true }
num_enum = { workspace = true }
ouroboros = { workspace = true }
percentage = { workspace = true }
qualifier_attr = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["rc"] }
serde_derive = { workspace = true }
serde_json = { workspace = true }
siphasher = { workspace = true }
THIS-solana-accounts-db = { workspace = true }
THIS-solana-address-lookup-table-program = { workspace = true }
THIS-solana-bpf-loader-program = { workspace = true }
THIS-solana-bucket-map = { workspace = true }
THIS-solana-compute-budget-program = { workspace = true }
THIS-solana-config-program = { workspace = true }
THIS-solana-cost-model = { workspace = true }
THIS-solana-frozen-abi = { workspace = true }
THIS-solana-frozen-abi-macro = { workspace = true }
THIS-solana-loader-v4-program = { workspace = true }
THIS-solana-measure = { workspace = true }
THIS-solana-metrics = { workspace = true }
THIS-solana-perf = { workspace = true }
THIS-solana-program-runtime = { workspace = true }
THIS-solana-rayon-threadlimit = { workspace = true }
THIS-solana-sdk = { workspace = true }
THIS-solana-stake-program = { workspace = true }
THIS-solana-system-program = { workspace = true }
THIS-solana-version = { workspace = true }
THIS-solana-vote = { workspace = true }
THIS-solana-vote-program = { workspace = true }
THIS-solana-zk-token-proof-program = { workspace = true }
THIS-solana-zk-token-sdk = { workspace = true }
static_assertions = { workspace = true }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }
symlink = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
zstd = { workspace = true }

[lib]
crate-type = ["lib"]
name = "solana_runtime"

[dev-dependencies]
assert_matches = { workspace = true }
ed25519-dalek = { workspace = true }
libsecp256k1 = { workspace = true }
memoffset = { workspace = true }
rand_chacha = { workspace = true }
THIS-solana-accounts-db = { workspace = true, features = [
    "dev-context-only-utils",
] }
THIS-solana-logger = { workspace = true }
# See order-crates-for-publishing.py for using this unusual `path = "."`
THIS-solana-runtime = { path = ".", features = ["dev-context-only-utils"] }
THIS-solana-sdk = { workspace = true, features = ["dev-context-only-utils"] }
static_assertions = { workspace = true }
test-case = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
rustc_version = { workspace = true }

[features]
dev-context-only-utils = []

[[bench]]
name = "prioritization_fee_cache"
