[package]
name = "solana-tpu-client"
description = "Solana TPU Client"
documentation = "https://docs.rs/solana-tpu-client"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true }
futures-util = { workspace = true }
indexmap = { workspace = true }
indicatif = { workspace = true, optional = true }
log = { workspace = true }
rayon = { workspace = true }
THIS-solana-connection-cache = { workspace = true }
THIS-solana-measure = { workspace = true }
THIS-solana-metrics = { workspace = true }
THIS-solana-pubsub-client = { workspace = true }
THIS-solana-rpc-client = { workspace = true }
THIS-solana-rpc-client-api = { workspace = true }
THIS-solana-sdk = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[features]
default = ["spinner"]
# Support tpu-client methods that feature a spinner progress bar for
# command-line interfaces
spinner = ["dep:indicatif", "solana-rpc-client/spinner"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
