[package]
name = "solana-udp-client"
description = "Solana UDP Client"
documentation = "https://docs.rs/solana-udp-client"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
async-trait = { workspace = true }
THIS-solana-connection-cache = { workspace = true }
THIS-solana-net-utils = { workspace = true }
THIS-solana-sdk = { workspace = true }
THIS-solana-streamer = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
