[package]
name = "solana-address-lookup-table-program"
description = "Solana address lookup table program"
documentation = "https://docs.rs/solana-address-loookup-table-program"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
bytemuck = { workspace = true }
log = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true, features = ["derive"] }
THIS-solana-frozen-abi = { workspace = true }
THIS-solana-frozen-abi-macro = { workspace = true }
THIS-solana-program = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(not(target_os = "solana"))'.dependencies]
THIS-solana-program-runtime = { workspace = true }
THIS-solana-sdk = { workspace = true }

[build-dependencies]
rustc_version = { workspace = true }

[lib]
crate-type = ["lib"]
name = "solana_address_lookup_table_program"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
