[package]
name = "solana-stake-program"
description = "Solana Stake program"
documentation = "https://docs.rs/solana-stake-program"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
log = { workspace = true }
THIS-solana-config-program = { workspace = true }
THIS-solana-program-runtime = { workspace = true }
THIS-solana-sdk = { workspace = true }
THIS-solana-vote-program = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
proptest = { workspace = true }
THIS-solana-logger = { workspace = true }
test-case = { workspace = true }

[build-dependencies]
rustc_version = { workspace = true }

[lib]
crate-type = ["lib"]
name = "solana_stake_program"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
