[package]
name = "solana-vote-program"
description = "Solana Vote program"
documentation = "https://docs.rs/solana-vote-program"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
log = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
THIS-solana-frozen-abi = { workspace = true }
THIS-solana-frozen-abi-macro = { workspace = true }
THIS-solana-metrics = { workspace = true }
THIS-solana-program = { workspace = true }
THIS-solana-program-runtime = { workspace = true }
THIS-solana-sdk = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
THIS-solana-logger = { workspace = true }
test-case = { workspace = true }

[build-dependencies]
rustc_version = { workspace = true }

[lib]
crate-type = ["lib"]
name = "solana_vote_program"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
