[package]
name = "solana-zk-token-proof-program"
description = "Solana Zk Token Proof Program"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bytemuck = { workspace = true, features = ["derive"] }
num-derive = { workspace = true }
num-traits = { workspace = true }
THIS-solana-program-runtime = { workspace = true }
THIS-solana-sdk = { workspace = true }
THIS-solana-zk-token-sdk = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
curve25519-dalek = { workspace = true }

[[bench]]
name = "verify_proofs"
harness = false
